RESOLVED FIXED75854
Fix style errors in CSSParser.cpp
https://bugs.webkit.org/show_bug.cgi?id=75854
Summary Fix style errors in CSSParser.cpp
Zoltan Herczeg
Reported 2012-01-09 06:57:25 PST
Move the style error fixes out from the CSS lexer patch.
Attachments
patch (8.50 KB, patch)
2012-01-09 07:00 PST, Zoltan Herczeg
no flags
Zoltan Herczeg
Comment 1 2012-01-09 07:00:13 PST
WebKit Review Bot
Comment 2 2012-01-09 07:03:32 PST
Attachment 121665 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/css/CSSParser.cpp:916: One space before end of line comments [whitespace/comments] [5] Source/WebCore/css/CSSParser.cpp:930: One space before end of line comments [whitespace/comments] [5] Source/WebCore/css/CSSParser.cpp:1040: Missing spaces around | [whitespace/operators] [3] Source/WebCore/css/CSSParser.cpp:1411: One space before end of line comments [whitespace/comments] [5] Total errors found: 4 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nikolas Zimmermann
Comment 3 2012-01-10 07:15:36 PST
Comment on attachment 121665 [details] patch r=me, Zoltan told me the other style errors are for consistency, with tons of existing comments in that switch. so r=me.
WebKit Review Bot
Comment 4 2012-01-10 07:58:48 PST
Comment on attachment 121665 [details] patch Clearing flags on attachment: 121665 Committed r104576: <http://trac.webkit.org/changeset/104576>
WebKit Review Bot
Comment 5 2012-01-10 07:58:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.