Fix style errors in CSSParser.cpp https://bugs.webkit.org/show_bug.cgi?id=75854

Reviewed by Nikolas Zimmermann.

Minor style fixes.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
(WebCore::CSSParser::parseShadow):
(WebCore::isBorderImageRepeatKeyword):
(WebCore::BorderImageSliceParseContext::commitBorderImageSlice):
(WebCore::BorderImageQuadParseContext::commitBorderImageQuad):
(WebCore::filterInfoForName):


git-svn-id: svn://svn.chromium.org/blink/trunk@104576 bbb929c8-8fbe-4397-9dbb-9b2b20218538